# finance-data-download-test

./: .gitignore  =3.8  README.md  dist_fits.py  libraries.txt  main.py  pyproject.toml  requirements.txt
data/: french25_excess_monthly.csv  french49_excess_monthly.csv  risk_free_monthly.csv
data/famafrench_cache/: F-F_Research_Data_5_Factors_2x3_tbl0_192607_latest.csv  F-F_Research_Data_Factors_daily_tbl0_192601_latest.csv
notebooks/: FF25 CAPM.ipynb  Mirage of Criticality.ipynb  datamining.ipynb  moment_sensitivity.ipynb  monte_carlo_demo.ipynb  psr_market_robustness.ipynb  thesis_experiment_mvp.ipynb
notebooks/data/famafrench_cache/: 25_Portfolios_5x5_tbl0_start_latest.csv  49_Industry_Portfolios_tbl0_192607_latest.csv  F-F_Momentum_Factor_tbl0_start_latest.csv  F-F_Research_Data_5_Factors_2x3_tbl0_start_latest.csv  F-F_Research_Data_Factors_tbl0_192607_latest.csv  F-F_Research_Data_Factors_tbl0_start_latest.csv  Portfolios_Formed_on_ME_tbl0_start_latest.csv
notebooks/results/: summary_demo.csv
results/: summary_demo.csv
src/: __init__.py  run_mc.py  sharpe_mc.py
src/finance_data/: __init__.py  ar_garch.py  datasets.py  french.py  metrics.py  spreads.py  survival.py
src/finance_data/pipeline/: zoo.py
tests/: test_sharpe_mc.py
