[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharpe-mc"
version = "0.1.0"
description = "Minimal Monte Carlo study for Sharpe-ratio inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.9",
  "arch>=6.3",
  "matplotlib>=3.8",
  "pytest>=7.0",
  "tdqm>=4.67"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
